Bug 329758 - changing markers via DOM does not cause a refresh. r=tor,sr=roc