layout/svg/base/src/nsSVGFilterFrame.cpp
@@ -150,11 +150,15 @@ NS_GetSVGFilterFrame(nsISVGFilterFrame **aResult,
     NS_WARNING("No document for this content!");
     return NS_ERROR_FAILURE;
   }
-  nsIPresShell *aPresShell = myDoc->GetShellAt(0);
+  nsIPresShell *presShell = myDoc->GetShellAt(0);
+  if (!presShell) {
+    NS_WARNING("no presshell");
+    return NS_ERROR_FAILURE;
+  }
 
   // Find the referenced frame
   nsIFrame *filter;
-  if (!NS_SUCCEEDED(nsSVGUtils::GetReferencedFrame(&filter, aURI, aContent, aPresShell)))
+  if (!NS_SUCCEEDED(nsSVGUtils::GetReferencedFrame(&filter, aURI, aContent, presShell)))
     return NS_ERROR_FAILURE;
 
   nsIAtom* frameType = filter->GetType();
